# rkdeveloptool

./: .gitignore  99-rk-rockusb.rules  CMakeLists.txt  DefineHeader.h  Endian.h  Makefile  Makefile.am  Property.hpp  README.md  RKBoot.cpp  RKBoot.h  RKComm.cpp  RKComm.h  RKDevice.cpp  RKDevice.h  RKImage.cpp  RKImage.h  RKLog.cpp  RKLog.h  RKScan.cpp  RKScan.h  Readme.txt  autogen.sh  boot_merger.h  config.h.in  config.ini  configure.ac  configure~  crc.cpp  gpt.h  main.cpp  parameter_gpt.txt
cfg/: .gitignore  Makefile.am
